internal/xds/translator/testdata/out/xds-ir/http2-route.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener
    routes:
    - match:
        headers:
        - name: user
          stringMatch:
            exact: jason
        path: foo/bar
        queryParameters:
        - name: debug
          stringMatch:
            exact: "yes"
      name: first-route
      route:
        cluster: first-route
